kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplepy
  labels:
    app: samplepy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samplepy
  template:
    metadata:
      labels:
        app: samplepy
    spec:
      containers:
      - name: samplepy
        image: helshabini/samplepy:latest
        ports:
        - containerPort: 5000
