kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samplepy-service
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: samplepy
