kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: samplepy-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: samplepy.380b43b09f314e2b89fd.southafricanorth.aksapp.io
    http:
      paths:
      - backend:
          serviceName: samplepy-service
          servicePort: 5000
        path: /
